--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,11 @@ services:
         ports:
             - 9092:9092
             - 39092:39092
-            - 443:443
         environment:
             KAFKA_BROKER_ID: 1
             KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,DOCKER_HOST://host.docker.internal:39092, EXTERNAL://ontrackdata.asuscomm.com:443, LOCALHOST://localhost:9092
-            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,DOCKER_HOST:PLAINTEXT, LOCALHOST:PLAINTEXT, EXTERNAL:PLAINTEXT
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,DOCKER_HOST://host.docker.internal:39092, LOCALHOST://localhost:9092
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,DOCKER_HOST:PLAINTEXT, LOCALHOST:PLAINTEXT
             KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
         logging:
